--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  a:link {
+    color: #0d169b;
+    text-decoration: none;
   }
-  to {
-    transform: rotate(360deg);
+  
+  a:visited {
+    color:blue;
+    text-decoration: none;
   }
-}
+  
+  a:hover {
+    color:blue;
+    text-decoration: none;
+  }
+  
+  a:active {
+    text-decoration: none;
+  }
+  
+  .card-body {
+    border-radius: 100px;
+    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+    max-width: 750px;
+    margin: 0 auto;
+    padding: 35px 35px;
+  }
+  
+  .ForecastPreview {
+    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+    max-width: 120px;
+    border-radius: 25px;
+    padding: 30px 30px;
+  }
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .WeatherDescription {
+    background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+    max-width: 600px;
+    margin: 10px auto;
+    padding: 10px 10px;
+    font-size: large;
+    color: White;
+    border-radius: 150px;
+  }
