--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,23 @@
     padding: 10px;
     text-align: center;
   }
+
+  .App-footer {
+  color: white;
+  }
   
   a:link {
-    color: #0d169b;
+    color: rgb(167, 7, 167);
     text-decoration: none;
   }
   
   a:visited {
-    color:blue;
+    color: rgb(167, 7, 167);
     text-decoration: none;
   }
   
   a:hover {
-    color:blue;
+    color:rgb(167, 7, 167);
     text-decoration: none;
   }
   
@@ -26,17 +30,18 @@
   
   .card-body {
     border-radius: 100px;
-    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+    background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
     max-width: 750px;
     margin: 0 auto;
     padding: 35px 35px;
   }
   
   .ForecastPreview {
-    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+    background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
     max-width: 120px;
-    border-radius: 25px;
+    border-radius: 15px;
     padding: 30px 30px;
+    color: white;
   }
   
   ul {
@@ -46,11 +51,12 @@
   }
   
   .WeatherDescription {
-    background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+    background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
     max-width: 600px;
     margin: 10px auto;
     padding: 10px 10px;
     font-size: large;
     color: White;
     border-radius: 150px;
+    text-align: center;
   }
